# vnm-proyectos

./: .gitignore  CORRECCION_ERRORES_DIAGNOSTICO.md  DEBUGGING_FRONTEND_SOLUCION_DEFINITIVA.md  DEBUG_SETUP.md  DEVTOOLS_README.md  FLUJO_DESARROLLO_FINAL.md  LOCAL_DEBUGGING_GUIDE.md  ORQUESTADOR_README.md  PLAN_TESTING_COMPLETO.md  README.md  README_CONFIGURACION.md  REFERENCIA_RAPIDA.md  RESUMEN_CAMBIOS.md  RESUMEN_CAMBIOS_DEBUGGING.md  REVISION_COMPLETADA.md  SOLUCION_DATABASE_CREDENTIALS.md  SOLUCION_DEBUG_FRONTEND.md  SOLUCION_ENCODING_DOCKER.md  SOLUCION_HASH_CORRUPTO.md  VERIFICACION_EXTENSIONES.md  cerrar-desarrollo.ps1  corregir_encoding.py  cspell.json  desarrollo.py  diagnosticar_backend.py  docker-compose.debug.yml  docker-compose.yml  docker_manager.py  fix-bcrypt-error.ps1  fix-bcrypt-error.sh  fix-hash-corrupto.ps1  formatear-codigo.ps1  inicio-desarrollo-seguro.ps1  inicio-desarrollo.ps1  inicio-desarrollo.sh  inicio_rapido.sh  instalar_orquestador.py  last_diagnostic.json  orquestador_desarrollo.py  pyproject.toml  (+19 more)
.vscode_backup/: extensions.json  settings.json  tasks.json
_vscode/: CORRECCION_COMPLETA_FINAL.md  EXTENSIONES-OPTIMIZADAS.md  README-DEBUG.md  README_DEBUGGING_FRONTEND.md  README_DEBUGGING_INTEGRADO.md  extensions.json  launch.json  requirements-dev.txt  settings.json  tasks.json
automate/: README.md  apply_complete_debugging_fix.py  cerrar-desarrollo.ps1  cerrar_desarrollo.py  clean_debug_configurations.py  comandos-desarrollo.bat  comandos-desarrollo.ps1  diagnosticar_backend.py  enable_frontend_debugging.py  extensiones_vscode.py  fix_containers_compatibility.py  fix_debug_configurations.py  fix_debug_containers.py  fix_subprocess_encoding.py  formatear_codigo.py  inicio-desarrollo.ps1  inicio_desarrollo.py  instalar_vscode_config.py  recrear_base_datos.py  test-black-formatting.py  test-vscode-config.py  test-windows-config.py  test_encoding_concept.py  utilidades.py  validar_archivos_movidos.py  validar_configuracion_vscode.py  verificar_configuracion_completa.py  verificar_vscode_instalado.py  vnm.py  vnm_automate.py
backend/: .env.example  .gitignore  Dockerfile.dev  requirements-dev.txt  requirements.txt  requirements.txt_backup  start-debug.py
database/: .gitignore  InstructivoInicioBackupApagado.txt  SOLUCION_PGADMIN_INTEGRADA.md  init.sql  pgadmin-pgpass  pgadmin-servers.json
devtools/: EJEMPLO_SALIDA_ORQUESTADOR.md  desarrollo.py  inicio_rapido.sh  instalar_orquestador.py  orquestador_desarrollo.py  requirements.txt
frontend/: .gitignore  .prettierignore  Dockerfile.dev  README_AUTH_SYSTEM.md  eslint.config.js  index.html  package-lock.json  package.json  start-debug.sh  tsconfig.node.json  vite.config.js
info/: CONFIGURACION_DEBUG_VSCODE_CORREGIDA.md  CONFIGURACION_DEPURACION_VSCODE.md  CONFIGURACION_FLAKE8_BLACK.md  DEBUG_SETUP.md  DEPURACION_CONFIGURADA.md  (+18 more)
(+129 files in other folders)
