[metadata]
name = vnm-proyectos
description = Sistema de Monitoreo de Red IP

[flake8]
max-line-length = 79
max-complexity = 10
extend-ignore = E203,E501,W503,E226
exclude = 
    .git,
    __pycache__,
    .venv,
    venv,
    migrations,
    build,
    dist,
    *.egg-info
per-file-ignores = __init__.py:F401,F403
show-source = True
statistics = True
count = True

[tool:pytest]
testpaths = tests
python_files = test_*.py *_test.py
python_classes = Test*
python_functions = test_*
addopts = 
    --strict-markers
    --strict-config
    --disable-warnings
    -v
markers =
    slow: marks tests as slow
    integration: marks tests as integration tests
    unit: marks tests as unit tests

[mypy]
python_version = 3.11
warn_return_any = True
warn_unused_configs = True
check_untyped_defs = True
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
strict_equality = True

[mypy-sqlalchemy.*]
ignore_missing_imports = True

[mypy-alembic.*]
ignore_missing_imports = True

[mypy-psycopg2.*]
ignore_missing_imports = True

[mypy-fastapi.*]
ignore_missing_imports = True

[mypy-pydantic.*]
ignore_missing_imports = True
